# game_engine

./: .gitignore  main.py  pyproject.toml
engine/: __init__.py  constants.py  engine.py
engine/actions/: __init__.py  actions.py
engine/animations/: __init__.py  animations.py  constants.py  frames.py
engine/audio/: __init__.py  audio.py  constants.py
engine/cache/: __init__.py  cache.py
engine/camera/: __init__.py  camera.py
engine/constants/: __init__.py  constants.py  direction.py  empty.py  path.py
engine/events/: __init__.py  constants.py  events.py  pressed.py
engine/map/: __init__.py  visible_map.py
engine/metaclasses/: engine.py  singleton.py
engine/mixins/: __init__.py  management.py  quit.py  set_settings.py
engine/objects/: __init__.py  base_object.py  constants.py  dataclasses.py  groups.py  objects.py  test.py
engine/objects/backgrounds/: __init__.py  backgrounds.py  constants.py
engine/objects/inputs/: button.py
engine/objects/text/: __init__.py  text.py
engine/physics/: __init__.py  actions.py  constants.py
engine/physics/isometry/: actions.py  isometry.py
engine/physics/platformer/: actions.py  platformer.py
engine/settings/: __init__.py  constants.py  schemas.py  settings.py  types.py
engine/text/: __init__.py  text.py
engine/tile_grid/: __init__.py  constants.py  tile_grid.py
engine/time/: __init__.py  time.py
engine/utils/: events.py  file.py  screen.py
